--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,10 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Publish to Docker Hub
-      uses: docker/build-push-action@v3     
-      with:       
-        username: ${{ secrets.DOCKER_USERNAME }} 
-        password:  ${{ secrets.DOCKER_PASSWORD }}
-        repository: markoblazhevski/kiii_final_project     
-        tags: ${{github.run_number}}
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
